# codeiq-cyberdefence-reversing-challenge

./: .gitignore  FigureOutPass.hs  README  README.md  codeiq-cyberdefence.cabal
crackme1/: FigureOutPass.hs  codeiq-cyberdefence.cabal  crackme1
sniffing1/: Makefile  README.md  http_auth.pcap  sniff.cabal
sniffing1/src/: Main.hs  Sniff.hs
sniffing1/src/Sniff/: Internal.hs
sniffing1/test/: HUnitTests.hs  QuickCheckTests.hs
